[package]
name = "mq_test"
version = "0.1.0"
authors = ["Jeremy Thorne <jez@jezandbecks.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = {path = "../miniquad"}
glam = {version = "0.20.2", features = ["scalar-math"] }
quad-rand = "0.1"
